cmake_minimum_required(VERSION 3.16)
project(advent_of_code_21)
set(CMAKE_CXX_STANDARD 17)

add_executable(day_1 day_1.cpp)
add_executable(day_2 day_2.cpp)
add_executable(day_3 day_3.cpp)
add_executable(day_4 day_4.cpp)
add_executable(day_5 day_5.cpp)
add_executable(day_6 day_6.cpp)
add_executable(day_7 day_7.cpp)
add_executable(day_8 day_8.cpp)
add_executable(day_9 day_9.cpp)
add_executable(day_10 day_10.cpp)